# ai_email_assistant

./: README.md  pyproject.toml
app/: config.py  embeddings.py  main.py  pipeline.py  prompts.py  retriever.py  router.py  schemas.py
data/knowledge_base/: README.txt
data/labeled_samples/: README.txt
examples/: sample_email.json
scripts/: build_index.py  evaluate.py
tests/: test_schema.py
